# cortex-strings

./: .bzrignore  Makefile.am  NOTES  README  configure.ac
benchmarks/dhry/: Makefile  dhry_1.c
benchmarks/multi/: Makefile  harness.c
reference/: configure.ac
reference/bionic/: memcmp.S  memcpy.S  strchr.c  strcmp.S  strcmp.c  strcpy.S  strlen.c
reference/glibc/: memchr.c  memcpy.S  memset.S  strchr.c  strcmp.c  strcpy.c  strlen.S
reference/glibc-c/: strcpy.c
reference/helpers/: bounce.c  spawn.c
reference/newlib/: strchr.c
reference/plain/: memcpy.c  memset.c  strcmp.c  strcpy.c
scripts/: add-license.sh  bench-all.sh  bench.py  libplot.py  plot-align.py  plot-sizes.py  plot-top.py  plot.py
src/: Makefile.am  configure.ac
src/aarch64/: memchr.S  memcpy.S  strcpy.S  strncmp.S  strnlen.S
src/linaro-a9/: memchr.S  memcpy-hybrid.S  memcpy.S  memset.S  strchr.S  strchr.s  strcmp.S  strlen.S  strlen.s
src/neon/: memcpy.S  memset.S
src/reference/: Makefile.am  configure.ac  test.py
src/reference/bionic/: memcmp16.S  memcpy.S  strlen.c
src/reference/glibc/: memcpy.S  memmove.S  memset.S
src/reference/helpers/: bounce.c  spawn.c
src/reference/newlib/: strcmp.c
src/thumb-2/: strcmp.c  strcpy.c  strlen.S  strlen.c
tests/: test-memchr.c
